# Neural-network-from-scratch

./: CMakeLists.txt  README.md  input.h  labels.h  layers.h  loss.h  main.cpp  mlp.cpp  net.h
include/: input.h  labels.h  layers.h  loss.h  net.h
src/: main.cpp  mlp.cpp
utilities/: paral.h  softmax.h  traits_concepts.h  types.h
